--- a/war/lingoking.css
+++ b/war/lingoking.css
@@ -64,4 +64,9 @@ td.profiles-ListName {
    height: 100%;
    width: 100%;
  }
+
+.error-text-box {
+  border: 1px solid red;
+  padding-left: 15px
+  !important; }
  
